align 4 style fix

--- a/align-four/styles/index.processed.css
+++ b/align-four/styles/index.processed.css
@@ -61,7 +61,7 @@ h2 {
 }
 
 .panel.info {
-  /*height: 100px;*/
+  height: 75px;
 }
 
 #trigger-div {
